--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -60,7 +61,6 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
-    // When using Kotlin.
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
     //Coroutine Testing ......
@@ -93,6 +93,9 @@ dependencies {
 
     // Material Design
     implementation "com.google.android.material:material:$support_library_version"
+
+    // camera library
+    implementation 'com.mindorks:paracamera:0.2.2'
 
 
 }
