--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,9 @@ dependencies {
     //gson
     implementation "com.google.code.gson:gson:$gson"
 
+    //csv
+    implementation "com.github.doyaaaaaken:kotlin-csv-jvm:0.9.0"
+
 
     //Debbuging
     // Debugging
