--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,11 @@ dependencies {
     //csv
     implementation "com.github.doyaaaaaken:kotlin-csv-jvm:0.9.0"
 
+    //zxing library
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0'
+    //Piccaso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
     //Debbuging
     // Debugging
